Bug 312082 - Text barely readable with some colour schemes
Summary: Text barely readable with some colour schemes
Status: RESOLVED FIXED
Alias: None
Product: ktouch
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Gottfried
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-22 20:39 UTC by Fabian
Modified: 2012-12-25 12:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10 RC 2
Sentry Crash Report:


Attachments
shows the barely readable text (61.08 KB, image/png)
2012-12-22 20:39 UTC, Fabian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian 2012-12-22 20:39:05 UTC
In the main menu, where one selects the lesson, the text is unfortunately nearly readable with some coulor schemes, as the text colour appears to be hardcoded to white, as shown in the attached picture.

Reproducible: Always
Comment 1 Fabian 2012-12-22 20:39:47 UTC
Created attachment 75974 [details]
shows the barely readable text
Comment 2 Sebastian Gottfried 2012-12-23 10:12:09 UTC
No, the text color isn't hardcoded. To me it looks like a conflict between Oxygen widget background color and your Plasma Theme's text foreground color. But there is clearly a problem, I will look into it.
Comment 3 Sebastian Gottfried 2012-12-23 10:42:40 UTC
Can you please specify:
 - the Plasma Theme you use
 - the widget style and color theme you use?
Comment 4 Fabian 2012-12-23 11:29:44 UTC
My plasma theme style is a user defined mesh-up of others, but I can reproduce this with e.g. Oxygen, Slim Glow and Produkt. The colour theme is gentle, but I can get similiar results with the "Standard" theme. The widget style is oxygen.
Comment 5 Sebastian Gottfried 2012-12-25 12:21:34 UTC
Git commit bf5e124db9a53550d8f561fe569caef0610aa0a1 by Sebastian Gottfried.
Committed on 25/12/2012 at 12:40.
Pushed by gottfried into branch 'master'.

fix appearance of application with light-on-dark themes

In the most cases relying on theme colors instead of
fixed colors was enough, and in a few more cases for
elements with fixed background the opposite was right way
to achieve a good-looking result.

Most tricky proved to be the application background. I didn't
want to give up the Oxygen-provided background to ensure visual
consistency with the window decoration. Therefore I use Plasma's
background color but set the alpha accoardingly to the difference
between the two, if the colors are pretty similar the alpha is
zero.
FIXED-IN: 4.10 RC 2

M  +1    -0    src/CMakeLists.txt
M  +2    -0    src/application.cpp
A  +40   -0    src/declarativeitems/applicationbackground.cpp     [License: GPL (v2+)]
A  +32   -0    src/declarativeitems/applicationbackground.h     [License: GPL (v2+)]
M  +6    -1    src/graph-plugin/qml/BarGraph.qml
M  +1    -0    src/graph-plugin/qml/LegendItem.qml
M  +6    -1    src/graph-plugin/qml/LineGraph.qml
M  +1    -1    src/qml/CourseDescriptionItem.qml
M  +1    -1    src/qml/CourseSelector.qml
M  +1    -0    src/qml/MessageBox.qml
M  +2    -2    src/qml/ProfileDetailsItem.qml
M  +3    -2    src/qml/ScoreScreen.qml
M  +5    -0    src/qml/main.qml

http://commits.kde.org/ktouch/bf5e124db9a53550d8f561fe569caef0610aa0a1